# data-exchange-api

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
data/anonymized/: CEPC.csv  MAKT.csv  MARA.csv  MARC.csv  MARM.csv  MBEW.csv  MVKE.csv  VBAK.csv  VBAP.csv  VBEP.csv  pipeline_config.py
notebooks/: 01_bronze_ingestion.py  02_silver_transform.py  03_gold_demand_rpt.py
scripts/: anonymize.py
src/api/: config.py  main.py
src/api/db/: connector.py
src/api/routes/: demand.py
src/api/schemas/: demand.py
tests/: test_api.py  test_transformations.py
workflow/: demand_pipeline.json
